--- a/linux/references.org
+++ b/linux/references.org
@@ -1305,3 +1305,50 @@ python
 >> pgtest.pg_test()
 >> exit()
 #+END_SRC
+** Install oracle java
+Download the oracle java from:
+~http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html~
+
+Scp the tar to target machine
+~scp -i mykey.pem ./jdk-8u5-linux-x64.tar.gz  atk@somedomain.ddns.net:~/~
+
+On target machine unpack it to /opt/jdk
+
+~tar -zxf jdk-8u5-linux-x64.tar.gz -C /opt/jdk~
+
+Set Oracle JDK as default JVM
+
+~update-alternatives --install /usr/bin/java java /opt/jdk/jdk1.8.0_05/bin/java 100~
+~update-alternatives --install /usr/bin/javac javac /opt/jdk/jdk1.8.0_05/bin/javac 100~
+
+** Install Android Sdk
+
+Download and unzip in /opt/
+
+#+BEGIN_SRC 
+export ANDROID_HOME=/opt/android-sdk-linux
+
+wget http://dl.google.com/android/android-sdk_r24.2-linux.tgz
+tar -xvf android-sdk_r24.2-linux.tgz
+mv android-sdk-linux /opt/
+#+END_SRC
+
+Allow permissions to jenkins
+
+#+BEGIN_SRC 
+sudo chown jenkins:jenkins /opt/android-sdk-linux/
+#+END_SRC
+
+Accept the licenses
+
+#+BEGIN_SRC 
+sudo su jenkins
+/opt/android-sdk-linux/tools/android update sdk --no-ui
+#+END_SRC
+
+Set path
+
+#+BEGIN_SRC 
+export PATH=${PATH}:$ANDROID_HOME/platform-tools:$ANDROID_HOME/tools:$ANDROID_HOME/build-tools/25.0.2/
+source /etc/profile
+#+END_SRC
