--- a/java/springbootngcd.org
+++ b/java/springbootngcd.org
@@ -452,6 +452,7 @@ Nothing helped? Download the latest eclipse/STS.
 ****** Nginx hosting the front end
 ****** Nginx Mapping to upstream containers
 * Bug fixes
+
 ** Spring boot compile both as JAR and deployable WAR
 
 In <properties> ensure
@@ -518,6 +519,124 @@ Add following plugin cusotmizations in the <build>
     </archive>
   </configuration>
 </plugin>
+#+END_SRC
+
+** Spring boot 1.5.1.RELEASE CORS disable
+
+In our WebMvcConfig we configured csrf as below:
+
+#+BEGIN_SRC 
+package com.boot.config;
+
+import org.springframework.context.annotation.Configuration;
+import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter;
+
+@Configuration
+@EnableWebMvc
+public class WebMvcConfig extends WebMvcConfigurerAdapter{
+
+	@Override
+	public void addResourceHandlers(ResourceHandlerRegistry registry) {
+		registry.addResourceHandler("swagger-ui.html")
+			.addResourceLocations("classpath:/META-INF/resources/");
+		registry.addResourceHandler("/webjars/**")
+			.addResourceLocations("classpath:/META-INF/resources/webjars/");
+	}
+
+	@Override
+	public void addCorsMappings(CorsRegistry registry) {
+		registry.addMapping("/**")
+		.allowedOrigins("*")
+		.allowedMethods("PUT", "DELETE", "POST", "GET","PATCH")
+		.allowCredentials(false).maxAge(3600);
+	}
+	
+}
+#+END_SRC
+
+In WebSecurityConfig we have already disabled cors earlier ~http.csrf().disable();~
+
+#+BEGIN_SRC 
+package com.boot.config;
+
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+
+@Configuration
+@EnableWebSecurity
+class WebSecurityConfig extends WebSecurityConfigurerAdapter {
+
+    private static final String[] AUTH_WHITELIST = {
+			"/webjars/**", 
+			"/*.html", 
+			"/favicon.ico", 
+			"/**/*.css", 
+			"/**/*.js",
+			"/v2/api-docs/**", 
+			"/swagger-resources/**",
+            "/blogposts/**",
+            "/home/**"
+    };
+    
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+        http.csrf().disable();
+        
+        http.authorizeRequests()
+                .antMatchers(AUTH_WHITELIST).permitAll()
+                .antMatchers("/**/*").denyAll();
+    }
+
+}
+
+#+END_SRC
+
+Following filter will add the CORS headers. Modify the allowed CORS if required.
+
+#+BEGIN_SRC 
+package com.boot.config;
+
+
+import org.springframework.stereotype.Component;
+import javax.servlet.FilterChain;
+import javax.servlet.FilterConfig;
+import javax.servlet.ServletException;
+import javax.servlet.ServletRequest;
+import javax.servlet.ServletResponse;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+
+
+@Component
+public class SimpleCORSFilter implements javax.servlet.Filter {
+	@Override
+	public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
+		HttpServletResponse res = (HttpServletResponse) response;
+		HttpServletRequest  req = (HttpServletRequest) request;
+		// Just REPLY OK if request method is OPTIONS for CORS (pre-flight)
+
+		res.addHeader("Access-Control-Allow-Origin", "*");
+		res.addHeader("Access-Control-Allow-Methods", "GET, POST, DELETE, PUT, OPTIONS");
+		res.addHeader("Access-Control-Allow-Headers", "Origin, X-Requested-With");
+		if ( req.getMethod().equals("OPTIONS") ) {
+        res.setStatus(HttpServletResponse.SC_OK);
+        return;
+    }
+		chain.doFilter(request, response);
+	}
+
+	@Override
+	public void destroy() {}
+
+	@Override
+	public void init(FilterConfig filterConfig) throws ServletException {}
+}
+
 #+END_SRC
 
 ** Spring boot Jar runs locally but WAR shows no activity on tomcat. 
